--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
           <li class="active"><a ng-href="#/">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#/">Contact</a></li>
+          <li><a ng-href="#/showFormUser">New User</a></li>
 
         </ul>
         <h3 class="text-muted">yeomanAngular</h3>
@@ -72,6 +72,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/angularfire/dist/angularfire.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
